ImpressCMS ChangeLog

== Impresscms 1.2==

===2009-??-?? : 1.2 Alpha===
'''Added'''
* Purifier Filters for GoogleVideo & Local Flash movies (movies that are stored locally on the same server as the site). (vaughan)
* TextSanitizer to admin users edit form, for sanitizing signature field when HTML is allowed. (vaughan)
* choice of xoopsFormTextArea or xoopsFormDHTMLTextArea to edit user form (signature) depends on whether HTML sig is allowed or not. (vaughan)
* Implementing SimplePie as a new library and IcmsSimpleRss extending it for ImpressCMS. (malanciault)
* Implementing IcmsPersistableSingleView which provides an easy way to quickly display a single object information. (malanciault)
* Implementing IcmsPersistableTreeTable extending IcmsPersistableTable with the concept of nested objects. (malanciault)
* Implementing SimplePie as admin RSS. (stranger)
* Implementing icmsstopspammer to stop spammers. (stranger)
* smarty to change a theme&template between RTL and LTR. (stranger)
* smarty <{$smarty.const._GLOBAL_LEFT}> for templates. (stranger)
* smarty <{$smarty.const._GLOBAL_RIGHT}> for templates. (stranger)
* TinyMCE plugin icmsmlcontent. (stranger)
* Issues with ICMS Captcha Class. (stranger)
* New preferences category for captcha. (stranger)
* New preferences category for plugins. (stranger)
* New option for "Captcha mode" in preferences. (stranger)
* New option for "Case sensitive" in preferences. (stranger)
* New option for "Maximum attemps" in preferences. (stranger)
* New option for "Minimum attemps" in preferences. (stranger)
* New option for "Minimum font-size" in preferences. (stranger)
* New option for "Maximum font-size" in preferences. (stranger)
* New option for "Background type" in preferences. (stranger)
* New option for "image amounts" in preferences. (stranger)
* New option for "polygon points" in preferences. (stranger)
* New option for "check groups" in preferences. (stranger)