@@ -4,6 +4,7 @@ ImpressCMS ChangeLog
 
 ===2009-??-?? : 1.2 Alpha===
 '''Added'''
+* extra parameter in uploader class setPrefix function to select whether a unique filename is created or whether just to add a prefix. (vaughan)
 * Purifier Filters for GoogleVideo & Local Flash movies (movies that are stored locally on the same server as the site). (vaughan)
 * TextSanitizer to admin users edit form, for sanitizing signature field when HTML is allowed. (vaughan)
 * choice of xoopsFormTextArea or xoopsFormDHTMLTextArea to edit user form (signature) depends on whether HTML sig is allowed or not. (vaughan)
